--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,15 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+.counters {
+    margin-right: 30px;
+    font-size: 10px;
+    text-align: center;
+
+    .vote,
+    .answer {
+        width: 60px;
+        height: 60px;
+    }
+}
