Implement delete functionality for the question

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,8 +40,13 @@
         }
     }
 
-    .views {
+    .view {
         margin-top: 10px;
+
+    }
+
+    form.form-delete {
+        display: inline;
     }
 
 }
