--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -6,5 +6,5 @@ $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
-$color-green: rgb(95, 187, 126);
+$color-green: rgb(95, 187, 126, );
 $color-white: #fff;
