--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,46 +7,96 @@
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
 
+.navbar-laravel {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
 .counters {
     margin-right: 30px;
     font-size: 10px;
     text-align: center;
+}
 
-    strong {
-        display: block;
-        font-size: 2em;
+strong {
+    display: block;
+    font-size: 2em;
+}
+
+.vote,
+.answer {
+    width: 60px;
+    height: 60px;
+    border: 1px solid red;
+}
+
+.status {
+    &.unanswered {
+        border: none;
     }
 
-    .vote,
-    .answer {
-        width: 60px;
-        height: 60px;
+    &.answered {
+        border: 1px solid $color-green;
+        color: $color-green;
     }
 
-    //class ="status unanswered"
-    .status {
-        &.unanswered {
-            border: none;
-        }
-
-        &.answered {
-            border: 1px solid $color-green;
-            color: $color-green;
-        }
-
-        &.answered-accepted {
-            background-color: $color-green;
-            color: $color-white;
-        }
+    &.answered-accepted {
+        background: $color-green;
+        color: $color-white;
     }
 
     .view {
         margin-top: 10px;
+    }
+}
+
+form.form-delete {
+    display: inline;
+}
+
+.vote-controls {
+    min-width: 60px;
+    margin-right: 20px;
+    text-align: center;
+    color: $gray-700;
+
+    span,
+    a {
+        display: block;
 
     }
 
-    form.form-delete {
-        display: inline;
+    span {
+        &.votes-count {
+            font-size: 20px;
+        }
+
+        &.favorites-count {
+            font-size: 10px;
+        }
+    }
+
+    a {
+        cursor: pointer;
+        color: $gray-600;
+
+        &.off,
+        &.off:hover {
+            color: $gray-500;
+        }
+
+        &.favorite {
+
+            &.favorited,
+            &.favorited:hover {
+                color: $warning;
+            }
+        }
+
+        &.vote-accepted {
+            color: $green;
+
+        }
     }
 
 }
